--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Haus Deck Pro v1.1</title>
+<title>Haus Deck Pro v1.2</title>
 <style>
   /* =======================
      GENERAL STYLES
   ======================= */
-  html, body {margin:0; padding:0; background:#121212; font-family: 'Arial', sans-serif; color:#eee;}
+  html, body {margin:0; padding:0; background:#0c0c0c; font-family: 'Arial', sans-serif; color:#eee;}
   * {box-sizing:border-box;}
-  h1 {text-align:center; margin:10px 0; color:#f0a500;}
+  h1 {text-align:center; margin:10px 0; color:#ccc;}
   
   /* =======================
      HEADER
   ======================= */
-  #header {padding:10px; text-align:center; background:#1c1c1c; border-bottom:1px solid #333;}
+  #header {padding:10px; text-align:center; background:#1a1a1a; border-bottom:1px solid #333;}
   
   /* =======================
      SEQUENCER GRID
@@ -22,25 +22,30 @@
   .grid {display:grid; gap:2px; margin:10px auto; max-width:960px;}
   .track-row {display:grid; grid-template-columns: repeat(16, 1fr); margin:4px 0;}
   .step {width:100%; padding-top:100%; position:relative; cursor:pointer; border-radius:3px; background:#222; transition:0.1s;}
-  .step.active {background:#f0a500;}
+  .step.active {background:#aaa;}
   .step:after {content:""; display:block; padding-bottom:100%;}
   
   /* =======================
      MIXER
   ======================= */
   .mixer {display:flex; justify-content:center; margin:10px auto; gap:10px; max-width:960px;}
-  .channel {background:#1c1c1c; padding:10px; border-radius:5px; width:120px; display:flex; flex-direction:column; align-items:center;}
-  .fader {writing-mode: bt-lr; -webkit-appearance: slider-vertical; width:8px; height:80px; margin:5px 0;}
+  .channel {background:#1a1a1a; padding:10px; border-radius:5px; width:120px; display:flex; flex-direction:column; align-items:center;}
+  .fader {writing-mode: bt-lr; -webkit-appearance: slider-vertical; width:8px; height:80px; margin:5px 0; accent-color:#ccc;}
   .pan {width:80%; margin:5px 0;}
   
   /* =======================
      CONTROLS
   ======================= */
   .controls {display:flex; justify-content:center; gap:10px; margin:10px;}
-  button {padding:8px 16px; border:none; border-radius:5px; background:#f0a500; color:#121212; cursor:pointer; transition:0.2s;}
-  button:hover {background:#ffbf47;}
+  button {padding:8px 16px; border:none; border-radius:5px; background:#333; color:#eee; cursor:pointer; transition:0.2s;}
+  button:hover {background:#555;}
   
   select {padding:5px; border-radius:3px; border:none; background:#222; color:#eee;}
+  
+  /* =======================
+     PER-STEP VELOCITY SLIDER
+  ======================= */
+  .velocity-slider {width:100%; margin-top:2px;}
   
   /* =======================
      VISUALIZER
@@ -49,7 +54,7 @@
 </style>
 </head>
 <body>
-<div id="header"><h1>Haus Deck Pro v1.1</h1></div>
+<div id="header"><h1>Haus Deck Pro v1.2</h1></div>
 
 <!-- =======================
      GENRE & PRESET CONTROLS
@@ -84,17 +89,18 @@
 
 <script>
 /* =======================
-   HAUS DECK PRO v1.1
+   HAUS DECK PRO v1.2
    WebAudio + Sequencer Engine
+   iOS-friendly + Greyscale DJ UI
 ======================= */
 const AudioContextClass = window.AudioContext || window.webkitAudioContext;
 const audioCtx = new AudioContextClass();
 
 let isPlaying = false;
 let currentStep = 0;
-const tempo = 122; // Slightly groovy default
-const stepInterval = (60 / tempo) / 4; // 16th notes
-const swing = 0.08; // Default swing factor
+const tempo = 122;
+const stepInterval = (60 / tempo) / 4;
+const swing = 0.08;
 
 /* =======================
    TRACK DEFINITIONS
@@ -208,7 +214,6 @@ function playSample(buffer, gain=1){
 ======================= */
 function applySidechain(track){
   if(track.sidechain){
-    // Simple sidechain: reduce gain if Kick is active
     const kickStep = tracks[0].steps[currentStep];
     if(kickStep) track.gain *= 0.5;
   }
@@ -227,7 +232,6 @@ function stepSequencer(){
     }
   });
 
-  // Apply swing
   let delay = stepInterval;
   if(currentStep % 2 === 1) delay += stepInterval * swing;
 
@@ -236,11 +240,12 @@ function stepSequencer(){
 }
 
 /* =======================
-   BUTTONS
+   BUTTONS WITH iOS AUDIO RESUME
 ======================= */
-document.getElementById('playStop').addEventListener('click',()=>{
-  if(!isPlaying){isPlaying=true; stepSequencer();}
-  else{isPlaying=false; currentStep=0;}
+document.getElementById('playStop').addEventListener('click', async ()=>{
+  if (audioCtx.state === 'suspended') await audioCtx.resume(); // iOS fix
+  if(!isPlaying){isPlaying = true; stepSequencer();}
+  else{isPlaying = false; currentStep=0;}
 });
 
 document.getElementById('randomize').addEventListener('click',()=>{
@@ -294,7 +299,7 @@ function drawVisualizer(){
   const barWidth = canvas.width / dataArray.length;
   for(let i=0;i<dataArray.length;i++){
     const h = dataArray[i];
-    ctx.fillStyle = `rgb(${h+50},50,${200})`;
+    ctx.fillStyle = `rgb(${h+100},${h+100},${h+100})`;
     ctx.fillRect(i*barWidth, canvas.height-h, barWidth, h);
   }
 }
